# OC

./: .gitignore  CMakeLists.txt  title.docx
lab 2/: child.c  main.c  report.docx  vector.h
lab3/: main.c  matfunc.h  merge.h  report.docx
lab4/: child.c  main.c  report.docx
lab5/: CMakeLists.txt  dynamic.c  function1.c  function2.c  functions.h  report.docx  static.c
lab6-8/: CMakeLists.txt  client.cpp  network.h  report.docx  server_fin.cpp  timer.cpp
